# actions

./: .gitignore  .markdownlint.yaml  .shellcheckrc  .yamllint.yml  CONTRIBUTING.md  README.md
cv/generate/: action.yml  pyproject.toml
cv/generate/scripts/: render_variants.py  run.sh
cv/parse/: DECISIONS.md  action.yml  pyproject.toml
cv/parse/scripts/: parse.py  run.sh
cv/parse/scripts/templates/: personal-info.tex.j2
cv/parse/scripts/templates/fs/: certifications.tex.j2  conferences.tex.j2  education.tex.j2  experience.tex.j2  interests.tex.j2  languages.tex.j2  skills.tex.j2
cv/parse/scripts/templates/ia/: certifications.tex.j2  conferences.tex.j2  education.tex.j2  experience.tex.j2  interests.tex.j2  languages.tex.j2  skills.tex.j2
cv/parse/scripts/templates/plain/: certifications.tex.j2  conferences.tex.j2  education.tex.j2  experience.tex.j2  interests.tex.j2  languages.tex.j2  skills.tex.j2
cv/parse/scripts/templates/sidebar/: certifications.tex.j2  conferences.tex.j2  education.tex.j2  experience.tex.j2  interests.tex.j2  languages.tex.j2  skills.tex.j2
cv/parse/scripts/templates/tagged/: certifications.tex.j2  conferences.tex.j2  education.tex.j2  experience.tex.j2  interests.tex.j2  languages.tex.j2  skills.tex.j2
cv/parse/scripts/templates/web/: cv.yml.j2
cv/parse/test/: cv-broken.yaml  cv-broken.yml  cv-minimal-contact.yml  cv-plain.yml  cv.yaml  cv.yml  run-tests.sh
cv/parse/test/golden/dh-de/: cv-education.tex  cv-skills.tex  personal-info.tex
cv/parse/test/golden/fs-en/: cv-certifications.tex  cv-conferences.tex  cv-education.tex  cv-experience.tex  cv-interests.tex  cv-languages.tex  cv-skills.tex  personal-info.tex
cv/parse/test/golden/ia-de/: cv-certifications.tex  cv-conferences.tex  cv-education.tex  cv-experience.tex  cv-interests.tex  cv-languages.tex  cv-skills.tex
cv/parse/test/golden/minimal-de/: cv-certifications.tex  cv-conferences.tex  cv-education.tex  cv-experience.tex  cv-interests.tex  cv-languages.tex  cv-skills.tex  personal-info.tex
cv/parse/test/golden/plain-de/: cv-certifications.tex  cv-conferences.tex  cv-education.tex  cv-experience.tex  cv-interests.tex  cv-languages.tex
cv/parse/test/golden/plain-en/: cv-education.tex  cv-experience.tex  cv-interests.tex  cv-languages.tex  cv-skills.tex  personal-info.tex
cv/parse/test/golden/pw-de/: cv-certifications.tex  cv-conferences.tex  cv-experience.tex  cv-interests.tex  personal-info.tex
cv/parse/test/golden/sidebar-de/: cv-education.tex  cv-experience.tex  cv-languages.tex
(+30 files in other folders)
